# pico-apps

./: .gitmodules  CMakeCache.txt  README.md  howto.txt  test
assignments/assign01/: CMakeLists.txt  assign01.S  assign01.c
assignments/assign01/elf2uf2/src/ELF2UF2Build-stamp/: ELF2UF2Build-source_dirinfo.txt
assignments/assign01/elf2uf2/tmp/: ELF2UF2Build-mkdirs.cmake
examples/: CMakeLists.txt
examples/blink_asm/: CMakeCache.txt  CMakeLists.txt
examples/ws2812_rgb/pioasm/src/PioasmBuild-stamp/: PioasmBuild-source_dirinfo.txt
examples/ws2812_rgb/pioasm/tmp/: PioasmBuild-mkdirs.cmake
labs/lab01/: CMakeLists.txt  lab01.c
labs/lab01/Lab01/: CMakeLists.txt  lab01.c
labs/lab02/: CMakeLists.txt  diagram.json  lab02.c
labs/lab03/: CMakeLists.txt  lab03.S  lab03.c
labs/lab04/: CMakeLists.txt  lab04.S
labs/lab05/: CMakeLists.txt  lab05.S
labs/lab06/: CMakeLists.txt  lab06.c
labs/lab07/: CMakeLists.txt  lab07.c
labs/lab09/: CMakeLists.txt  lab09.S  lab09.c
test.dSYM/Contents/Resources/DWARF/: test
